#+ATTR_HTML: :align center
Copyright \copy {{{time(%Y)}}} Mitch Richling. All rights reserved.

#+TOC: headlines 5

* Changes On HEAD Since Last Release
:PROPERTIES:
:CUSTOM_ID: latest
:END:
  - Fixed Bugs
    - N/A
  - Known Issues
    - N/A
  - API breaking Changes
    - N/A
  - Deprecated functionality
    - N/A
  - New functionality
    - N/A
  - Documentation
    - Added test coverage document
  - Examples
    - New
      - N/A
    - Updated
      - N/A
  - Miscellaneous
    - Broke utest_colorTpl.cpp up into diffrent files
    - Added IncludeMRMathCPPLib.cmake code

* 22.0.0.0: Feature & Refactor Release
:PROPERTIES:
:CUSTOM_ID: v22.0.0.0
:END:
  - Fixed Bugs
    - mjr::colorTpl::tfrmMod Added divide by zero check for floating point channels
    - mjr::colorTpl::tfrmDiv Better divide by zero check for floating point channels
    - mjr::colorTpl::tfrmAddDivClamp Better divide by zero check for floating point channels
    - mjr::colorTpl::tfrmLn1 Added non-positive log check for floating point images
    - mjr::colorTpl::tfrmLn Added non-positive log check
  - Known Issues
    - N/A
  - API breaking Changes
    - N/A
  - Deprecated functionality
    - N/A
  - New functionality
    - N/A
  - Documentation
    - N/A
  - Examples
    - New
      - wakOrb01.cpp
      - wakOrb02.cpp
      - wakOrb03.cpp
      - doublePendulum.cpp
      - doublePendulumM.cpp
    - Updated
      - N/A
  - Miscellaneous
    - Replaced BOOST Test with GTest
    - Better check.rb
    - Streamlined CMake configuration
      - Better integration with MRMathCPP
      - Added build directory
      - Just export cmake file and not a package
      - Use exported config for builds
* 21.0.0.0: Feature & Refactor Release
:PROPERTIES:
:CUSTOM_ID: v21.0.0.0
:END:
  - Fixed Bugs
    - clampAll, clampBot, clampTop: now limited to channel arithmetic types
    - Problem with enabling 128-bit integers on GCC resolved
    - Integer wrap for color schemes better for negative arguments.