@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-01-27 Mon 15:37 -->
+<!-- 2025-01-29 Wed 10:51 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>Change Log</title>
@@ -230,12 +230,12 @@
 
 <tr>
 <td class="org-right"><b>Updated:</b></td>
-<td class="org-left"><i>2025-01-27 15:37:19</i></td>
+<td class="org-left"><i>2025-01-28 16:20:05</i></td>
 </tr>
 
 <tr>
 <td class="org-right"><b>Generated:</b></td>
-<td class="org-left"><i>2025-01-27 15:37:26</i></td>
+<td class="org-left"><i>2025-01-29 10:51:20</i></td>
 </tr>
 </tbody>
 </table>
@@ -299,7 +299,8 @@ Copyright &copy; 2025 Mitch Richling. All rights reserved.
 </ul></li>
 <li>New functionality
 <ul class="org-ul">
-<li>N/A</li>
+<li>mjr::ramCanvasTpl::readTIFFfile: Added error 23: Image is tiled.</li>
+<li>mjr::ramCanvasTpl::readTIFFfile: Added error 24: Image has a palette.</li>
 </ul></li>
 <li>Documentation
 <ul class="org-ul">
